# diffgcm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: baroclinic_instability.ipynb  held_suarez.ipynb
src/diffgcm/: __init__.py  __main__.py
